# Mini_Millennium_Tower

./: .gitignore  Analyze.md  BUILD.md  CMakeLists.txt  CMakePresets.json  LICENSE  Mess.md  README.md  _CMakePresets.json  default.profraw  leak_report.txt  log.txt  sanitizer_ubsan.supp
assets/: config.json
assets/data/: default_session_data.json  ui_config.json
assets/data/scripts/: combat.lua
assets/maps/: level1.tmj  level2.tmj  title.tmj
assets/save/: SLOT_3.json
cmake/: BuildHelpers.cmake  CompilerSettings.cmake  Dependencies.cmake  ImGui.cmake  ProjectInfo.cmake  RuntimePath.cmake  shell_minimal.html
cmake/scripts/: CopyAssets.cmake  CopyDLLS.cmake
new/: out.folded
old/: out.folded
scripts/: manage.sh  run_dev.sh  run_release.sh  run_relwithdbg.sh  run_web.sh
src/: Mine  main.cpp
src/engine/audio/: audio_player.cpp  audio_player.h
src/engine/binding/: engine_binding.cpp  engine_binding.h
src/engine/component/: animation_component.cpp  animation_component.h  audio_component.h  name_component.h  parallax_component.h  render_component.h  sprite_component.cpp  sprite_component.h  tilelayer_component.cpp  tilelayer_component.h  transform_component.h  velocity_component.h
src/engine/core/: config.cpp  config.h  context.cpp  context.h  game_app.cpp  game_app.h  game_state.cpp  game_state.h
src/engine/input/: input_manager.cpp  input_manager.h
src/engine/loader/: basic_entity_builder.cpp  basic_entity_builder.h  level_loader.cpp  level_loader.h
src/engine/render/: camera.h  image.h  renderer.cpp  renderer.h  sprite.h  text_renderer.h
src/engine/resource/: audio_manager.cpp  audio_manager.h  font_manager.cpp  font_manager.h  resource_manager.cpp  resource_manager.h  texture_manager.cpp  texture_manager.h
src/engine/scene/: level_loader.cpp  scene.cpp  scene.h  scene_manager.cpp  scene_manager.h
src/engine/script/: lua_manager.cpp  lua_manager.h
src/engine/system/: animation_system.cpp  animation_system.h  fwd.h  movement_system.cpp  movement_system.h  render_system.cpp  render_system.h  ysort_system.cpp  ysort_system.h
src/engine/ui/: ui_button.cpp  ui_button.h  ui_element.cpp  ui_element.h  ui_image.cpp  ui_image.h  ui_interactive.cpp  ui_interactive.h  ui_label.cpp  ui_label.h  ui_manager.cpp  ui_manager.h
src/engine/ui/state/: ui_hover_state.cpp  ui_hover_state.h  ui_normal_state.cpp  ui_normal_state.h  ui_pressed_state.cpp  ui_pressed_state.h  ui_state.h
src/engine/utils/: events.h  math.h
src/game/binding/: lua_binder.cpp  lua_binder.h
src/game/component/: blocked_by_component.h  blocker_component.h  class_name_component.h  cost_regen_component.h  enemy_component.h  player_component.h  skill_component.h  stats_component.h  target_component.h
src/game/data/: entity_blueprint.h  game_stats.h  level_config.h  lua_combat_calculator.cpp  lua_combat_calculator.h  session_data.cpp  session_data.h  ui_config.h  waypoint_node.h
src/game/defs/: constants.h  events.h  tags.h
src/game/factory/: blueprint_manager.cpp  blueprint_manager.h  entity_factory.cpp  entity_factory.h
src/game/loader/: entity_builder_TD.cpp  entity_builder_TD.h
src/game/scene/: end_scene.cpp  end_scene.h  game_scene.cpp  game_scene.h  level_clear_scene.cpp  level_clear_scene.h  title_scene.cpp
src/game/script/: combat_script_loader.cpp  combat_script_loader.h  game_binding.cpp  game_binding.h  lua_manager.cpp  lua_manager.h
src/game/scripts/AI/: AI.lua
src/game/scripts/combat/: combat.lua
src/game/system/: animation_event_system.cpp  animation_state_system.cpp  attack_starter_system.cpp  block_system.cpp  block_system.h  combat_resolve_system.cpp  combat_resolve_system.h  debug_ui_system.cpp  debug_ui_system.h  effect_system.cpp  effect_system.h  followpath_system.cpp  followpath_system.h  fwd.h  game_rule_system.cpp  game_rule_system.h  health_bar_system.cpp  orientation_system.cpp  orientation_system.h  place_unit_system.cpp  remove_dead_system.cpp  remove_dead_system.h  render_range_system.cpp  selection_system.cpp  selection_system.h  set_target_system.cpp  set_target_system.h  skill_system.cpp  skill_system.h  timer_system.cpp  timer_system.h
src/game/ui/: units_portrait_ui.cpp  units_portrait_ui.h
src/scripts/: damage_formula.lua
